# universalis-blazing

./: .dockerignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
devenv/: docker-compose.yml  prometheus.yml
src/: db.rs  main.rs  servers.rs  types.rs
src/fairings/: metrics.rs
src/routes/: least_recently_updated.rs  metrics.rs  mod.rs  most_recently_updated.rs  recently_updated.rs  tax_rates.rs
